# CHIP-8-Emulator

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
Core/: Core.hpp
Core/Emulator/: CPU.cpp  CPU.hpp  Configuration.hpp  Instruction.cpp  Instruction.hpp  Reader.hpp  Render.hpp
Core/Emulator/CPU/: CPU.cpp  CPU.hpp
Core/Emulator/CPU/Instruction/: Instruction.cpp  Instruction.hpp
Dependencies/: CMakeLists.txt
Dependencies/ImGui-SFML/: CMakeLists.txt
Dependencies/Include/: MemoryViewer.hpp
Dependencies/SFML/: CMakeLists.txt
